--- a/sascha/index.css
+++ b/sascha/index.css
@@ -11,9 +11,9 @@ body {
 }
 
 #tastatur {
-	display: flex;
+	/* display: flex;
 	flex-wrap: wrap;
-	justify-content: center;
+	justify-content: center; */
 	max-width: 800px;
 	margin: auto;
 }
