--- a/z_jannik/index_01.css
+++ b/z_jannik/index_01.css
@@ -1,14 +1,43 @@
+
+/* fonts */
+@font-face {
+	font-family: snickers_normal;
+	src: url(../andereDateien/fonts/snickers_normal.ttf);
+  }
+@font-face {
+	font-family: snickers_italic;
+	src: url(../andereDateien/fonts/snickers_italic.ttf);
+  }
+
+  /* colors */
+
+  :root {
+	--snickersRed: #f40000;
+	--snickersBrown: #410c00;
+	--snickersBrownTrans: rgba(65,12,0,0.9);
+	--snickersBlue: #200094;
+	--white: #200094;
+  }
+
+
+
 /* Grundlegende Styles für das Layout */
 body {
 	font-family: Arial, sans-serif;
 	text-align: center;
-    background-color: #410c00;
-    background-color: rgba(65,12,0,0.9);
+   
+    background-color: var(--snickersBrown);
+}
+
+h1 {
+    font-family: snickers_normal;
+	
 }
 
 .text {
     color:white;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: snickers_italic;
+	font-size: 100px
 }
 
 #wortfeld {
@@ -45,14 +74,14 @@ body {
 .letter {
 	width: 50px;
 	height: 50px;
-	background-color: #f40000;
+	background-color: var(--snickersRed);
 	margin: 25px;
 	border-style: double;
 	border: solid 4px;
 	border-radius: 50%;
 	border-color: white;
     outline-style: solid;
-    outline-color: #200094;
+    outline-color: var(--snickersBlue);
     outline-width: 200%;
     color:white;
 	cursor: pointer;
@@ -63,18 +92,18 @@ body {
 }
 
 .letter:hover {
-	background-color: #200094;
+	background-color: var(--snickersBlue);
 }
 
 .letter-clicked-success {
-	background-color: #200094;
+	background-color: var(--snickersBlue);
 	border-color: white;
 	cursor: default;
 }
 
 .letter-clicked-failed {
 	background-color: grey;
-	border-color: red;
+	border-color: var(--snickersRed);
 	cursor: default;
 }
 
@@ -90,3 +119,9 @@ body {
 	height: 500px;
 	margin: auto;
 }
+
+#hinweis {
+	color: white;
+	font-family:'Courier New', Courier, monospace;
+}
+
